Fixed the z-index of the nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@
     bottom: 200px;
     padding: 0;
     top: 0;
-    z-index: 10;
+    z-index: 500;
 }
 
 .ui-menu-color-about{
@@ -115,7 +115,7 @@ display: none;
     text-shadow: 2px 2px 1px rgb(8, 8, 8);
     position: absolute;
     z-index: 50;
-    left: 20%;
+    left: 15%;
     top: 20%;
     text-align: center;
     
@@ -132,9 +132,10 @@ display: none;
 
 .h6{
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
     z-index: -1;
     font-weight: 300;
+    padding: 5px;
 }
 
 /*-----------------ABOUT ME----------------*/
